--- a/Kaffeplaneten/Administrasjon/packages.config
+++ b/Kaffeplaneten/Administrasjon/packages.config
@@ -2,7 +2,6 @@
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
-  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -14,4 +13,5 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
 </packages>
